# payment-channels

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.json  codama-visitors.mjs  codama.js  deny.toml  justfile  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/actions/setup/: action.yml
.github/workflows/: benchmark.yml  ci.yml  security.yml
clients/rust/: Cargo.toml
clients/rust/src/: generated.rs  lib.rs
clients/typescript/: package.json
clients/typescript/src/: safe-codecs.ts
clients/typescript/src/__tests__/: instruction-parsers.test.ts  voucher-numeric-safety.test.ts  voucher-types.test-d.ts
docs/: 001-payment-channel-state-machine.md  002-http-protocol.md  003-program-instructions.md
keys/: payment_channels-keypair.json
program/payment_channels/: Cargo.toml  build.rs
program/payment_channels/idl/: payment_channels.json
program/payment_channels/src/: constants.rs  ed25519_parse.rs  errors.rs  event_engine.rs  lib.rs  voucher_payload.rs
program/payment_channels/src/events/: mod.rs  opened.rs  payout_redirected.rs
program/payment_channels/src/instructions/: distribute.rs  emit_event.rs  finalize.rs  mod.rs  open.rs  reclaim.rs  request_close.rs  seal.rs  settle.rs  settle_and_finalize.rs  settle_and_seal.rs  top_up.rs  withdraw_payee.rs  withdraw_payer.rs
program/payment_channels/src/instructions/helpers/: account.rs  distribution.rs  ed25519_parse.rs  hash.rs  mod.rs  sysvars.rs  token.rs  transfer.rs  view.rs  voucher.rs
program/payment_channels/src/instructions/helpers/accounts/: mod.rs  validation.rs  view.rs
program/payment_channels/src/instructions/helpers/ed25519/: consts.rs  parse.rs
program/payment_channels/src/state/: channel.rs  closed_channel.rs  common.rs  hash.rs  mod.rs  transmutable.rs
program/payment_channels/src/tests/: mod.rs
program/payment_channels/tests/: client_idl_wire.rs  codama_visitor_idl.rs  distribute.rs  distribution_hash.rs  event_engine_e2e.rs  instructions.rs  settle_e2e.rs  top_up_e2e.rs
program/payment_channels/tests/benchmark/: fixtures.rs  mod.rs  scenarios.rs
program/payment_channels/tests/common/: channel_state.rs  cu_tracker.rs  events.rs  lookup_table.rs  mod.rs  open.rs  settle.rs  token_2022.rs  voucher.rs
program/payment_channels/tests/distribute/: e2e.rs  integration.rs  mod.rs
program/payment_channels/tests/event_engine/: e2e.rs  integration.rs  mod.rs
program/payment_channels/tests/event_engine_e2e/: mod.rs
program/payment_channels/tests/finalize/: e2e.rs  integration.rs  mod.rs
program/payment_channels/tests/open/: accounts.rs  bounds.rs  channel_fields.rs  distribution.rs  distribution_plan.rs  e2e.rs  integration.rs  mod.rs
program/payment_channels/tests/reclaim/: e2e.rs  integration.rs  mod.rs
program/payment_channels/tests/request_close/: e2e.rs  integration.rs  mod.rs
program/payment_channels/tests/seal/: e2e.rs  integration.rs  mod.rs
program/payment_channels/tests/settle/: e2e.rs  integration.rs  mod.rs
program/payment_channels/tests/settle_and_finalize/: e2e.rs  integration.rs  mod.rs
program/payment_channels/tests/settle_and_seal/: e2e.rs  integration.rs  mod.rs
program/payment_channels/tests/settle_e2e/: mod.rs
program/payment_channels/tests/top_up/: accounts.rs  bounds.rs  e2e.rs  integration.rs  mod.rs
program/payment_channels/tests/withdraw_payer/: e2e.rs  integration.rs  mod.rs
program/payment_channels_core/: Cargo.toml
program/payment_channels_core/src/: errors.rs  event_engine.rs  lib.rs
program/payment_channels_core/src/events/: mod.rs  opened.rs
program/payment_channels_core/src/instructions/: distribute.rs  finalize.rs  open.rs  request_close.rs  settle.rs  settle_and_finalize.rs  top_up.rs  withdraw_payer.rs
program/payment_channels_core/src/instructions/helpers/: distribution.rs  voucher.rs
program/payment_channels_core/src/instructions/helpers/accounts/: view.rs
program/payment_channels_core/src/instructions/helpers/ed25519/: mod.rs
program/payment_channels_core/src/state/: channel.rs  closed_channel.rs
scripts/: bench_diff.mjs  enforce-fixed-account-shapes.mjs  narrow-codama-types.mjs
