[workspace]
members = [
    "program/payment_channels_core",
    "program/payment_channels",
    "clients/rust",
]
resolver = "2"

[workspace.dependencies]
payment_channels_client = { path = "clients/rust" }

[profile.release]
overflow-checks = true
opt-level       = 3
lto             = true
codegen-units   = 1
