[package]
name = "payment_channels_client"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"
solana-account = "~3.0"
solana-account-info = "~3.1"
solana-instruction = "~3.2"
solana-program-error = "~3.0"
solana-cpi = "~3.1"

  [dependencies.borsh]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.solana-address]
  version = "~2.2"
  features = [ "borsh", "curve25519" ]

  [dependencies.solana-client]
  optional = true
  version = "^3.0"

  [dependencies.anchor-lang]
  optional = true
  version = "~0.31"

[features]
default = [ ]
fetch = [ ]

