[package]
name = "payment_channels_client"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
thiserror = "2"
num-derive = "0.4"
num-traits = "0.2"
solana-account = "^3"
solana-account-info = "^3"
solana-instruction = "^3"
solana-program-error = "^3"
solana-cpi = "^3"

  [dependencies.borsh]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.solana-address]
  version = "2"
  features = [ "borsh", "curve25519" ]

  [dependencies.solana-client]
  optional = true
  version = "^3.0"

  [dependencies.spl-collections]
  version = "^0.1"
  features = ["borsh"]

  [dependencies.anchor-lang]
  optional = true
  version = "1"

[features]
default = [ ]
fetch = [ "dep:solana-client" ]
