[package]
name    = "payment_channels"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = []
# Enables codama derives + build.rs IDL emission. Host-only; must NOT
# be enabled for `cargo build-sbf` (see `compile_error!` guard in
# src/lib.rs). Use `cargo build --features idl` or `just generate-idl`.
idl = ["payment_channels_core/idl"]

[build-dependencies]
codama                = "0.9.1"
payment_channels_core = { path = "../payment_channels_core", version = "0.1.0" }
serde_json            = "1"

[dependencies]
payment_channels_core = { path = "../payment_channels_core", version = "0.1.0" }
pinocchio             = "0.11.1"

[dev-dependencies]
borsh                    = { version = "1", default-features = false, features = ["derive"] }
litesvm                  = { version = "0.11", features = ["precompiles"] }
litesvm-token            = { version = "0.11", features = ["token-2022"] }
payment_channels_client  = { workspace = true }
solana-address           = { version = "2", features = ["curve25519", "borsh"] }
solana-account           = "^3"
solana-clock             = "^3"
solana-instruction       = "^3"
solana-keypair           = "^3"
solana-message           = "^3"
solana-pubkey            = "^3"
solana-rent              = "^3"
solana-signer            = "^3"
solana-transaction       = "^3"
solana-transaction-error = "^3"
serde_json               = "1"
rstest                   = "0.26"
blake3                   = { version = "1", default-features = false }
mollusk-svm              = "0.11.0"
solana-instructions-sysvar = "^3"
solana-program-error       = "^3"
spl-token-2022-interface   = "2.1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
