[package]
name    = "payment_channels_core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = []
# Enables codama derives for host-only IDL generation.
idl = ["dep:codama"]

[dependencies]
pinocchio                          = { version = "0.11.1", features = ["cpi", "copy", "account-resize"] }
solana-address                     = { version = "2", features = ["curve25519", "borsh"] }
pinocchio-associated-token-account = "0.4.0"
pinocchio-system                   = "0.6.0"
pinocchio-token                    = "0.6.0"
pinocchio-token-2022               = "0.3.1"
codama                             = { version = "0.9.1", optional = true }
const-crypto                       = "0.3"
borsh                              = { version = "1", default-features = false, features = ["derive"] }
thiserror                          = { version = "2", default-features = false }

[dev-dependencies]
blake3                   = { version = "1", default-features = false }
spl-token-2022-interface = "2.1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
